# happypose

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  LICENSE  README.md  book.toml  check_cnos_submission.py  cnos_viz_dets.py  environment.yml  index.html  meh.sh  print.html  pyproject.toml  rclone.conf  searchindex.js  searchindex.json
.github/: dependabot.yml
.github/workflows/: book.yml  conda-test.yml  packaging.yml  pip-test.yml  poetry-test.yml  test.yml
book/: book.toml
book/src/: download-data.md  test-install.md
configs/: snapshot_ignore.txt
configs/code_snapshot/: dsgen_deps.yaml  happypose.yaml
configs/dsgen/: default.yaml  fastrun.yaml  gso_1M.yaml  shapenet_1M.yaml
configs/job/: single_gpu.yaml
configs/job_env/: happypose.yaml  jz_yann.yaml  lda.yaml
configs/local_job/: single_gpu.yaml
configs/local_node/: lda.yaml
configs/node/: lda.yaml
configs/run_ds_postproc/: default.yaml
configs/run_dsgen/: default.yaml  fastrun.yaml  gso_1M.yaml  shapenet_1M.yaml
configs/runner/: yann_sgpu.yaml
configs/slurm_job/: jz.yaml  single_gpu.yaml  yann.yaml
configs/slurm_queue/: gpu_p2.yaml  v100.yaml
configs/submitit_local/: default.yaml
cosypose/: cosypose_wrapper.py  download-data.html  download_data.html  environment.yaml  evaluate.html  inference.html  minimal_version.py  minimal_version_eval.py  minimal_version_overlay.py  minimal_version_overlay_cheetos.py  minimal_version_scene.py  overview-method.html  overview-repo.html  overview.html  overview_method.html  overview_repo.html  pybullet_minimal_version.py  rclone.conf  test-install.html  test_minimal_version_old.py  train.html
cosypose/config/: conf.prc
cosypose/cosypose/integrated/: detector.py
cosypose/cosypose/models/: pose.py
cosypose/cosypose/rendering/: bullet_batch_renderer.py
cosypose/cosypose/scripts/: download.py
cosypose/cosypose_demos/: README.md
cosypose/notebooks/: visualize_multiview_predictions.ipynb
data/assets/camera/: model.urdf
data/assets/cube/: model.urdf
docs/: conf.py  generate_dataset.md  index.rst  internal.rst  main.md  requirements.txt
docs/book/: SUMMARY.md  evaluate-cosypose.md
docs/book/cosypose/: download-data.md  download_data.md  evaluate.md  inference.md  overview-repo.md  overview.md  overview_method.md  overview_repo.md  test-install.md  train.md
docs/book/megapose/: download-data.md  download_data.md  evaluate.md  inference.md  overview.md  overview_method.md  overview_repo.md  test-install.md
experiments/: generate_dataset.py  make_gso_ids.py  make_shapenet_ids.py  postprocess_dataset.py
experiments/job-runner/: setup.py
experiments/job-runner/job_runner/: configs.py  utils.py
happypose/: __init__.py
happypose/pose_estimators/: __init__.py
happypose/pose_estimators/cosypose/: LICENSE  README.md  __init__.py  cosypose_wrapper.py  environment_noversion.yaml  minimal_version.py  minimal_version_eval.py  minimal_version_overlay.py  minimal_version_overlay_cheetos.py  minimal_version_scene.py  placeholder.py  pybullet_minimal_version.py  pyproject.toml  rclone.conf  setup.py  test_minimal_version.py  test_minimal_version_old.py  test_minimal_version_pybullet.py  tox.ini
happypose/pose_estimators/cosypose/config/: conf.prc
happypose/pose_estimators/cosypose/cosypose/: __init__.py  bop_config.py  config.py
happypose/pose_estimators/cosypose/notebooks/: inspect_dataset.ipynb  make_ycbv_per_object.ipynb  render_dataset.ipynb  visualize_multiview_predictions.ipynb  visualize_singleview_predictions.ipynb
happypose/pose_estimators/megapose/: CLA  LICENSE  README.md  __init__.py  bop_config.py  config.py  local_data  pyproject.toml  rclone.conf
happypose/toolbox/: __init__.py
happypose/toolbox/datasets/: augmentations.py  bop_object_datasets.py  bop_scene_dataset.py  datasets_cfg.py  deepim_modelnet.py  gso_dataset.py  modelnet_object_dataset.py  object_dataset.py  pickle_dataset.py  pose_dataset.py  samplers.py  scene_dataset.py  scene_dataset_wrappers.py  shapenet_object_dataset.py  urdf_dataset.py  utils.py  web_scene_dataset.py
happypose/toolbox/inference/: detector.py  example_inference_utils.py  pose_estimator.py  types.py  utils.py
happypose/toolbox/lib3d/: camera_geometry.py  cosypose_ops.py  cropping.py  distances.py  mesh_losses.py  mesh_ops.py  multiview.py  rigid_mesh_database.py  rotations.py  symmetries.py  transform.py  transform_ops.py
happypose/toolbox/renderer/: __init__.py  bullet_batch_renderer.py  bullet_scene_renderer.py  geometry.py  panda3d_batch_renderer.py  panda3d_scene_renderer.py  pybullet.py  renderer.py  types.py  utils.py
happypose/toolbox/utils/: conversion.py  distributed.py  download.py  load_model.py  logging.py  logs_bokeh.py  models_compat.py  omegaconf.py  random.py  resources.py  tensor_collection.py  timer.py  transform_utils.py  types.py  webdataset.py  xarray.py
happypose/toolbox/visualization/: bokeh_plotter.py  bokeh_utils.py  meshcat_utils.py  meshcat_visualizer.py  utils.py
megapose/: download-data.html  download_data.html  evaluate.html  inference.html  overview-method.html  overview-repo.html  overview.html  overview_method.html  overview_repo.html  test-install.html  todo.html
megapose6d/conda/: environment_full.yaml
notebooks/cosypose/: .gitignore  inspect_dataset.ipynb  make_ycbv_per_object.ipynb  paper_training_logs.ipynb  render_dataset.ipynb  visualize_multiview_predictions.ipynb  visualize_singleview_predictions.ipynb
notebooks/megapose/: megapose_estimator_visualization.ipynb
requirements/: base.in  cpu.in  cu121.in
tests/: __init__.py  test_batch_renderer_panda3d.py  test_cosypose_detector_training.py  test_cosypose_inference.py  test_cosypose_pose_training.py  test_detector.py  test_docs.py  test_evaluation.py  test_lib3d.py  test_megapose_inference.py  test_omega_conf.py  test_renderer_bullet.py  test_renderer_panda3d.py  test_scene_renderer_panda3d.py  tests_cosy.py
tests/config/: test_config.py
tests/data/: obj_000001.ply
tests/data/crackers_example/: camera_data.json
(+256 files in other folders)
