[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.coverage.run]
omit = ["cosypose", "megapose6d"]

[tool.mypy]
exclude = ["cosypose", "megapose6d"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pybullet"

[tool.poetry]
authors = ["Elliot Maître", "Yann Labbé"]
description = "Toolbox and trackers for object pose-estimation"
license = "BSD-2-Clause"
name = "happypose"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
addict = "^2.4.0"
beautifulsoup4 = "^4.12.2"
bokeh = "^3.2.2"
bop_toolkit_lib = {git = "https://github.com/agimus-project/bop_toolkit"}
cmeel-teaser-plusplus = {optional = true, version = "^2.0"}
cosypose = {optional = true, path = "happypose/pose_estimators/cosypose"}
httpx = "^0.25.0"
imageio = "^2.31.4"
ipython = "^8.12.2"
joblib = "^1.3.2"
meshcat = "^0.3.2"
omegaconf = "^2.3.0"
open3d = "^0.17.0"
opencv-contrib-python = {optional = true, version = "^4.8.0.76"}
opencv-python = {optional = true, version = "^4.8.0.76"}
panda3d = "=1.10.13"
pin = {optional = true, version = "^2.6.20"}
plyfile = "^1.0.3"
pybind11 = "^2.10.4"
pybullet = "^3.2.5"
pypng = "^0.20220715.0"
pytest = "^8.1.1"
python = ">=3.9,<3.11"
pyyaml = "^6.0.1"
roma = "^1.4.0"
scikit-image = "^0.22.0"
scikit-learn = "^1.3.1"
scipy = "^1.11.2"
seaborn = "^0.12.2"
selenium = "^4.16.0"
simplejson = "^3.19.1"
torch = [
  {markers = "extra=='cpu'", optional = true, source = "torch_cpu", version = "1.13.1+cpu"},
  {markers = "extra=='gpu'", optional = true, version = "1.13.1"}
]
torchvision = [
  {markers = "extra=='cpu'", optional = true, source = "torch_cpu", version = "0.14.1+cpu"},
  {markers = "extra=='gpu'", optional = true, version = "0.14.1"}
]
tqdm = "^4.66.1"
transforms3d = "^0.4.1"
trimesh = "^3.23.5"
webdataset = "^0.2.57"
xarray = "^2024.3.0"

[tool.poetry.extras]
cpu = ["torch", "torchvision"]
evaluation = ["cmeel-teaser-plusplus"]
gpu = ["torch", "torchvision"]
multiview = ["cosypose"]
pypi = ["opencv-contrib-python", "opencv-python", "pin"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^7.2.5"}
pre-commit = "^3.2.1"
ruff = "^0.2.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
myst-parser = "^2.0.0"
sphinx = "^7.2.6"

[[tool.poetry.source]]
name = "torch_cpu"
priority = "supplemental"
url = "https://download.pytorch.org/whl/cpu"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.urls]
changelog = "https://github.com/agimus-project/happypose/blob/main/CHANGELOG.md"

[tool.ruff]
extend-exclude = ["deps"]
target-version = "py38"

[tool.ruff.lint]
extend-ignore = ["D203", "D213"]
extend-select = ["I", "RUF", "W"]

[tool.tomlsort]
all = true
