[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = ["cosypose", "megapose6d"]

[tool.mypy]
exclude = ["cosypose", "megapose6d"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "pybullet"

[project]
authors = [{ name = "Elliot Maître"},{name =  "Yann Labbé"}]
description = "Toolbox and trackers for object pose-estimation"
license = "BSD-2-Clause"
name = "happypose"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.8"

[project.urls]
changelog = "https://github.com/agimus-project/happypose/blob/main/CHANGELOG.md"

[tool.ruff]
extend-exclude = ["deps"]
target-version = "py38"

[tool.ruff.lint]
extend-ignore = ["D203", "D213"]
extend-select = ["I", "RUF", "W"]

[tool.tomlsort]
all = true
